--- a/gardening_front/src/shared/api/openapi-templates/baseApi.mustache
+++ b/gardening_front/src/shared/api/openapi-templates/baseApi.mustache
@@ -26,6 +26,7 @@ export interface RequestArgs {
 export class BaseAPI {
     protected configuration: Configuration | undefined;
 
+    // @ts-ignore
     constructor(configuration?: Configuration, protected basePath: string = BASE_PATH, protected axios: AxiosInstance = axiosInstance) {
         if (configuration) {
             this.configuration = configuration;
@@ -35,6 +36,7 @@ export class BaseAPI {
 };
 
 export class RequiredError extends Error {
+    // @ts-ignore
     constructor(public field: string, msg?: string) {
         super(msg);
         this.name = "RequiredError"
